--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/mediscreen?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 spring.datasource.username=${DB_Username}
 spring.datasource.password=${DB_Password}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 server.servlet.session.timeout=360s
