--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
     </parent>
 
     <groupId>com.medic</groupId>
-    <artifactId>mediscreen</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>mediscreen-patient</artifactId>
+    <version>1</version>
     <name>mediscreen</name>
     <description>application for medical purposes</description>
 
@@ -35,6 +35,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,11 +66,6 @@
             <artifactId>lombok</artifactId>
             <version>1.18.10</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -147,7 +146,7 @@
                     <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
                     <excludes>
                         <exclude>**/com/medic/mediscreen/domain/**/*</exclude>
-                        <exclude>**/com/medic/mediscreen/TransferappsApplication.*</exclude>
+                        <exclude>**/com/medic/mediscreen/MediscreenPatientApplication.*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
