--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 databaseName=mediscreen
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/mediscreen?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
-spring.datasource.username=${DB_Username}
-spring.datasource.password=${DB_Password}
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-server.servlet.session.timeout=360s
+executiveTest=true
