--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=${DATABASE_PASSWORD:root}
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 executiveTest=true
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
